--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           Hi I'm Nickolas! Self taught web developer and curious human. This small piece of the web exists to share my ideas, projects, work, and other interesting things I discover.
         </p>
         <p class="text-2xl text-slate-600 pb-6">
-         Currently I'm avaliable for hire for freelance web design and development projects. I've built websites for numerous businesses and creative agencies using modern web standards and popular tools like Wordpress and Webflow. This website was built from scratch using HTML5 and <a class="text-slate-600 font-bold hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and <a class="text-slate-600 font-bold hover:text-sky-600" href="https://statamic.com/">Statamic</a>. 
+         Currently I'm avaliable for hire for freelance web design and development projects. I've built websites for numerous businesses and creative agencies using modern web standards and popular tools like Wordpress and Webflow. This website was built using HTML5 and <a class="text-slate-600 font-bold hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-bold hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>. 
         </p>
          <p class="text-2xl text-slate-600 pb-6">
          My skills continue to evolve and I enjoy the level of problem solving required to build things on the web. I'm not afraid to roll up my sleeves, tackle challenging technical problems, and figure things out. 
