--- a/index.html
+++ b/index.html
@@ -29,36 +29,43 @@
 
 </head>
 
-<body class="bg-slate-50 container mx-auto max-w-4xl">
+<body class="bg-white container mx-auto max-w-4xl">
   <header class="flex flex-row content-center items-center justify-between p-6 border-b-2 border-slate-200"> 
-    <h2 class="text-lg text-slate-700 font-bold"><a href="#">Nickolas Crim </a></h2>
+    <h2 class="text-lg text-slate-700 font-bold"><a href="../index.html">Nickolas Crim </a></h2>
       <nav class="w-1/2">
         <ul class="flex flex-row content-center justify-evenly">
-          <li><a class="text-slate-500 hover:text-sky-600" href="#">Hire</a></li>
-          <li><a class="text-slate-500 hover:text-sky-600" href="#">Blog</a></li>
-           <li><a class="text-slate-500 hover:text-sky-600" href="#">Links</a></li>
-          <li><a class="text-slate-500 hover:text-sky-600" href="https://twitter.com/nickolascrim">Twitter</a></li>
+          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="./pages/hire.html">Hire</a></li>
+          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="#">Blog</a></li>
+           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="#">Links</a></li>
+          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://twitter.com/nickolascrim">Twitter</a></li>
         </ul>
       </nav>
 
   </header>
-  <main class="px-6 pt-12">
-        <p class="text-2xl text-slate-600 pb-6">
-          Hi I'm Nickolas! Self taught web developer and curious human. This small piece of the web exists to share my ideas, projects, work, and other interesting things I discover.
+  <main class="px-6 py-12">
+
+        <h1 class="text-4xl text-slate-700 pb-12">Building simple, elegant things for the web</h1>
+
+        <p class="text-3xl font-light text-slate-600 pb-6">
+          Hi I'm Nickolas! Self taught web designer, developer, and curious human. This small piece of the web exists to share my ideas, projects, work, and other interesting things I discover.
         </p>
-        <p class="text-2xl text-slate-600 pb-6">
-         Currently I'm avaliable for hire for freelance web design and development projects. I've built websites for numerous businesses and creative agencies using modern web standards and popular tools like Wordpress and Webflow. This website was built using HTML5 and <a class="text-slate-600 font-bold hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-bold hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>. 
+        <p class="text-3xl font-light text-slate-600 pb-6">
+         Currently <a class="text-slate-600 font-bold hover:text-sky-600" href="./pages/hire.html">I'm avaliable for hire</a> for freelance web design and development projects. I've built websites for numerous businesses and creative agencies using modern web standards and popular tools like <a class="text-slate-600 font-bold hover:text-sky-600" href="https://www.wordpress.org/">Wordpress</a> and <a class="text-slate-600 font-bold hover:text-sky-600" href="https://www.webflow.com/">Webflow</a>. This website was built using HTML5 and <a class="text-slate-600 font-bold hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-bold hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>. 
         </p>
-         <p class="text-2xl text-slate-600 pb-6">
+         <p class="text-3xl font-light text-slate-600 pb-6">
          My skills continue to evolve and I enjoy the level of problem solving required to build things on the web. I'm not afraid to roll up my sleeves, tackle challenging technical problems, and figure things out. 
         </p>
-         <p class="text-2xl text-slate-600">
+         <p class="text-3xl font-light text-slate-600 pb-6">
          Overall my life is good. My days are spent reading, walking, thinking, hanging out with my wife, and working. I'm convinced there's more to life than accumulating wealth/status and my definition and approach to work continues to involve.
         </p>
 
   </main>
 
+  <footer class="flex flex-row content-center items-center justify-between p-6 border-t-2 border-slate-200"> 
+  </footer>
+
   <script src="js/scripts.js"></script>
 </body>
+
 
 </html>
