--- a/pages/hire.html
+++ b/pages/hire.html
@@ -58,7 +58,7 @@
               <li class="text-3xl font-light text-slate-600">Website training</li>
             </ul> 
             <p class="text-3xl font-light text-slate-600 pt-6 py-12">Timeline: 6-8 weeks (2 week wait list)</p>
-            <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject=Full Webiste Package">Email me</a></button>
+            <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject=Full Webiste Package">Get started</a></button>
         </div>
 
         <div class="pt-16">
@@ -70,7 +70,7 @@
               <li class="text-3xl font-light text-slate-600">We are quick, affordable and effective.</li>
             </ul>  
             <p class="text-3xl font-light text-slate-600 pt-6 py-12">Timeline: 1 week</p>
-             <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject=Express Package">Email me</a></button>
+             <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject=Express Package">Get started</a></button>
          </div> 
 
   </main>
