--- a/pages/hire.html
+++ b/pages/hire.html
@@ -43,12 +43,10 @@
 
   </header>
   <main class="px-6 py-12">
-        <p class="text-2xl text-slate-600 pb-6">
-         
-        </p>
-
+      
+      <h1 class="text-4xl text-slate-700 pb-12 hidden">Packages</h1>
        <div>
-         <h2 class="text-4xl text-slate-700 pb-6">Full Website package</h2>
+         <h2 class="text-3xl text-slate-700 pb-6">Full Website package</h2>
             <ul class="list-disc list-inside">
               <li class="text-3xl font-light text-slate-600">Redesign of up to 5 pages and 2 rounds of revisions</li>
               <li class="text-3xl font-light text-slate-600">Reusable company style sheet</li>
@@ -62,7 +60,7 @@
         </div>
 
         <div class="pt-16">
-          <h2 class="text-4xl text-slate-700 pb-6">Express package</h2>
+          <h2 class="text-3xl text-slate-700 pb-6">Express package</h2>
             <ul class="list-disc list-inside">
               <li class="text-3xl font-light text-slate-600">1 page, 7 days, $1,500 USD</li>
               <li class="text-3xl font-light text-slate-600">You pick one page on your site to redesign.</li>
