--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <nav class="w-1/2">
         <ul class="flex flex-row content-center justify-evenly">
           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="./pages/hire.html">Hire</a></li>
-          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="#">Blog</a></li>
-           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="#">Links</a></li>
+          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="./pages/blog.html">Blog</a></li>
+           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="./pages/links.html">Links</a></li>
           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://twitter.com/nickolascrim">Twitter</a></li>
         </ul>
       </nav>
@@ -50,7 +50,7 @@
           Hi I'm Nickolas! Self taught web designer, developer, and curious human. This small piece of the web exists to share my ideas, projects, work, and other interesting things I discover.
         </p>
         <p class="text-3xl font-light text-slate-600 pb-6">
-         Currently <a class="text-slate-600 font-bold hover:text-sky-600" href="./pages/hire.html">I'm avaliable for hire</a> for freelance web design and development projects. I've built websites for numerous businesses and creative agencies using modern web standards and popular tools like <a class="text-slate-600 font-bold hover:text-sky-600" href="https://www.wordpress.org/">Wordpress</a> and <a class="text-slate-600 font-bold hover:text-sky-600" href="https://www.webflow.com/">Webflow</a>. This website was built using HTML5 and <a class="text-slate-600 font-bold hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-bold hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>. 
+         Currently <a class="text-slate-700 font-normal hover:text-sky-600" href="./pages/hire.html">I'm avaliable for hire</a> for freelance web design and development projects. I've built websites for numerous businesses and creative agencies using modern web standards and popular tools like <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.wordpress.org/">Wordpress</a> and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.webflow.com/">Webflow</a>. This website was built using HTML5 and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>. 
         </p>
          <p class="text-3xl font-light text-slate-600 pb-6">
          My skills continue to evolve and I enjoy the level of problem solving required to build things on the web. I'm not afraid to roll up my sleeves, tackle challenging technical problems, and figure things out. 
