--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
 <body class="bg-white container mx-auto max-w-4xl">
   <header class="flex flex-row content-center items-center justify-between p-6 border-b-2 border-slate-200"> 
     <h2 class="text-lg text-slate-700 font-bold"><a href="../index.html">Nickolas Crim </a></h2>
-      <nav class="w-1/2">
+      <nav class="w-1/3">
         <ul class="flex flex-row content-center justify-evenly">
           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="./pages/hire.html">Hire</a></li>
-          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="./pages/blog.html">Blog</a></li>
-           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="./pages/links.html">Links</a></li>
+          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://crim.substack.com/">Blog</a></li>
           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://twitter.com/nickolascrim">Twitter</a></li>
         </ul>
       </nav>
@@ -56,7 +55,7 @@
          My skills continue to evolve and I enjoy the level of problem solving required to build things on the web. I'm not afraid to roll up my sleeves, tackle challenging technical problems, and figure things out. 
         </p>
          <p class="text-3xl font-light text-slate-600 pb-6">
-         Overall my life is good. My days are spent reading, walking, thinking, hanging out with my wife, and working. I'm convinced there's more to life than accumulating wealth/status and my definition and approach to work continues to involve.
+         Overall my life is good. My days are spent reading, walking, thinking, hanging out with my wife, and working. My goal is to live a fulfilling file and my definition and approach to work continues to evolve.
         </p>
 
   </main>
