--- a/pages/hire.html
+++ b/pages/hire.html
@@ -32,11 +32,10 @@
 <body class="bg-white container mx-auto max-w-4xl">
   <header class="flex flex-row content-center items-center justify-between p-6 border-b-2 border-slate-200"> 
     <h2 class="text-lg text-slate-700 font-bold"><a href="../index.html">Nickolas Crim </a></h2>
-      <nav class="w-1/2">
+      <nav class="w-1/3">
         <ul class="flex flex-row content-center justify-evenly">
       <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="../pages/hire.html">Hire</a></li>
-          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="../pages/blog.html">Blog</a></li>
-           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="../pages/links.html">Links</a></li>
+          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://crim.substack.com/">Blog</a></li>
           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://twitter.com/nickolascrim">Twitter</a></li>
         </ul>
       </nav>
@@ -46,16 +45,16 @@
       
       <h1 class="text-4xl text-slate-700 pb-12 hidden">Packages</h1>
        <div>
-         <h2 class="text-3xl text-slate-700 pb-6">Full Website package</h2>
+         <h2 class="text-3xl text-slate-700 pb-6">Website package</h2>
             <ul class="list-disc list-inside">
-              <li class="text-3xl font-light text-slate-600">Redesign of up to 5 pages and 2 rounds of revisions</li>
+              <li class="text-3xl font-light text-slate-600">Redesign of up to 7 pages and 2 rounds of revisions</li>
               <li class="text-3xl font-light text-slate-600">Reusable company style sheet</li>
               <li class="text-3xl font-light text-slate-600">Custom HTML, CSS, & JS</li>
               <li class="text-3xl font-light text-slate-600">Optimized for all screen sizes</li>
               <li class="text-3xl font-light text-slate-600">Built for SEO</li>
               <li class="text-3xl font-light text-slate-600">Website training</li>
             </ul> 
-            <p class="text-3xl font-light text-slate-600 pt-6 py-12">Timeline: 6-8 weeks (2 week wait list)</p>
+            <p class="text-3xl font-light text-slate-600 pt-6 py-12">Timeline: 6-8 weeks</p>
             <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject=Full Webiste Package">Get started</a></button>
         </div>
 
