--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
          My skills continue to evolve and I enjoy the level of problem solving required to build things on the web. I'm not afraid to roll up my sleeves, tackle challenging technical problems, and figure things out. 
         </p>
          <p class="text-3xl font-light text-slate-600 pb-6">
-         Overall my life is good. My days are spent reading, walking, thinking, hanging out with my wife, and working. My goal is to live a fulfilling file and my definition and approach to work continues to evolve.
+         Overall my life is good. My days are spent reading, walking, thinking, hanging out with my wife, and working. My goal is to live a fulfilling life and my definition and approach to work continues to evolve.
         </p>
 
   </main>
