--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 class="text-4xl text-slate-700 pb-12">Building simple, elegant things for the web</h1>
 
         <p class="text-3xl font-light text-slate-600 pb-6">
-          Hi I'm Nickolas! Self taught web designer, developer, and curious human. This small piece of the web exists to share my ideas, projects, work, and other interesting things I discover.
+          Hi I'm Nickolas! Self taught web designer, developer, and curious human. This small piece of the web exists to share my work, projects, ideas, and other interesting things I discover.
         </p>
         <p class="text-3xl font-light text-slate-600 pb-6">
          Currently <a class="text-slate-700 font-normal hover:text-sky-600" href="./pages/hire.html">I'm avaliable for hire</a> for freelance web design and development projects. I've built websites for numerous businesses and creative agencies using modern web standards and popular tools like <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.wordpress.org/">Wordpress</a> and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.webflow.com/">Webflow</a>. This website was built using HTML5 and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>. 
