--- a/pages/hire.html
+++ b/pages/hire.html
@@ -70,6 +70,15 @@
              <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject=Express Package">Get started</a></button>
          </div> 
 
+         <div class="pt-16">
+          <h2 class="text-3xl text-slate-700 pb-6">Contract work</h2>
+            <ul class="list-disc list-inside pb-12">
+              <li class="text-3xl font-light text-slate-600">Freelancer or agency looking to make your mockup a reality?</li>
+              <li class="text-3xl font-light text-slate-600">Send me the project details and I will respond within 48 hours with a quote.</li>
+            </ul>  
+             <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject=Contract Work">Get started</a></button>
+         </div> 
+
   </main>
   <footer class="flex flex-row content-center items-center justify-between p-6 border-t-2 border-slate-200"> 
   </footer>
