--- a/pages/hire.html
+++ b/pages/hire.html
@@ -63,8 +63,8 @@
             <ul class="list-disc list-inside">
               <li class="text-3xl font-light text-slate-600">1 page, 7 days, $1,500 USD</li>
               <li class="text-3xl font-light text-slate-600">You pick one page on your site to redesign.</li>
-              <li class="text-3xl font-light text-slate-600">We’ll revamp the page to make it more useful and usable.</li>
-              <li class="text-3xl font-light text-slate-600">We are quick, affordable and effective.</li>
+              <li class="text-3xl font-light text-slate-600">I’ll revamp the page to make it more useful and usable.</li>
+              <li class="text-3xl font-light text-slate-600">It's quick, affordable and effective.</li>
             </ul>  
             <p class="text-3xl font-light text-slate-600 pt-6 py-12">Timeline: 1 week</p>
              <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject=Express Package">Get started</a></button>
