--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <header class="flex flex-row content-center items-center justify-between p-6 border-b-2 border-slate-200"> 
     <h2 class="text-lg text-slate-700 font-bold"><a href="../index.html">Nickolas Crim </a></h2>
       <nav class="w-1/3">
-        <ul class="flex flex-row content-center justify-evenly">
+        <ul class="md:flex flex-row content-center justify-evenly">
           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="./pages/hire.html">Hire</a></li>
           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://crim.substack.com/">Blog</a></li>
           <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://twitter.com/nickolascrim">Twitter</a></li>
