--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
           </div>
         </div>
 
+
+        <div class="flex flex-col md:flex-row items-center w-full py-12" id="podcast-section">
+
+          <div class="flex flex-col w-full md:w-1/2 md:pr-6">
+            <h2 class="text-4xl font-medium text-slate-600 pb-6">Podcast</h2>
+            <p class="text-2xl font-light text-slate-600 pb-6">
+            Occasionally I have more interviw style conversations with people and share those via my podcast. Click the cover image to browse past episodes.
+            </p>
+          </div>
+          <div class="flex w-full md:w-1/2 md:pl-6">
+            <a href="https://feeds.transistor.fm/the-nickolas-crim-show"><img src="images/ncs-cover.png"></a>
+          </div>
+        </div>
+
   </main>
 
   <footer class="flex flex-row content-center items-center justify-between p-6 border-t-2 border-slate-200">
