--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="flex flex-col w-full md:w-1/2 md:pr-6">
             <h2 class="text-4xl font-medium text-slate-600 pb-6">Podcast</h2>
             <p class="text-2xl font-light text-slate-600 pb-6">
-            Occasionally I have more interviw style conversations with people and share those via my podcast. Click the cover image to browse past episodes.
+            Occasionally I have more interview style conversations with people and share those via my podcast. Click the cover image to browse past episodes.
             </p>
           </div>
           <div class="flex w-full md:w-1/2 md:pl-6">
