--- a/index.html
+++ b/index.html
@@ -42,20 +42,26 @@
   </header>
   <main class="px-6 py-24">
 
-        <h2 class="text-4xl font-medium text-slate-600 pb-6">About me</h2>
 
-        <p class="text-2xl font-light text-slate-600 pb-6">
-          Hey I'm Nickolas! Husband, father, introvert, freelancer, writer, and interested in too many things to list (Barbara Sher coined us Scanners). This small piece of the web serves as a launch pad for my projects, ideas, and other interesting things I discover.
-        </p>
-        <p class="text-2xl font-light text-slate-600 pb-6">
-         Currently <a class="text-slate-700 font-normal hover:text-sky-600" href="">I'm avaliable for hire</a> for freelance web design and development projects. I've built websites for numerous businesses and creative agencies using modern web standards and popular tools like <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.wordpress.org/">Wordpress</a> and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.webflow.com/">Webflow</a>. This website was built using HTML5 and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>.
-        </p>
-        <p class="text-2xl font-light text-slate-600 pb-6">
-         My days are spent in a variety of ways: reading, learning, thinking, walking, exercising, hanging out with my family, and working. My goal is to live a fulfilling life and pursue work that supports my life.
-        </p>
+        <div class="flexw-full pb-24">
 
+          <h2 class="text-4xl font-medium text-slate-600 pb-6">About me</h2>
 
-        <div class="flex flex-col md:flex-row items-center w-full py-24" id="essays-section">
+          <p class="text-2xl font-light text-slate-600 pb-6">
+            Hey I'm Nickolas! Freelancer, writer, and interested in too many things to list. This small piece of the web serves as a launch pad for my projects, ideas, and other interesting things I discover.
+          </p>
+          <p class="text-2xl font-light text-slate-600 pb-6">
+           Currently I'm building things on the web and <a class="text-slate-700 font-normal hover:text-sky-600" href=""> avaliable for hire</a> for freelance web design and development projects. I've built websites for numerous businesses and creative agencies using modern web standards and popular tools like <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.wordpress.org/">Wordpress</a> and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.webflow.com/">Webflow</a>. This website was built using HTML5 and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>.
+          </p>
+
+          <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject= Web Development Project">Start a project</a></button>
+
+          <p class="text-2xl font-light text-slate-600 py-6">
+           My days are spent in a variety of ways: reading, learning, thinking, walking, exercising, hanging out with my family, and working. My goal is to live a fulfilling life and pursue work that supports my life.
+          </p>
+        </div>
+
+        <div class="flex flex-col md:flex-row items-center w-full py-24 " id="essays-section ">
 
           <div class="flex flex-col w-full md:w-1/2 md:pr-6">
             <h2 class="text-4xl font-medium text-slate-600 pb-6">Essays</h2>
@@ -82,7 +88,7 @@
           <div class="flex flex-col w-full md:w-1/2 md:pl-6">
             <h2 class="text-4xl font-medium text-slate-600 pb-6">Jam sessions</h2>
               <p class="text-2xl font-light text-slate-600 pb-6">
-                I block off time on Thursdays and Fridays to make space for meaningful conversations. It can be reconnecting with someone or meeting someone new.
+                I block off time on Thursday afternoons to make space for meaningful conversations. It can be reconnecting with someone or meeting someone new.
               </p>
               <p class="text-2xl font-light text-slate-600 pb-6">
                 You've heard of music jam sessions? These are like those, but we'll be jammin to ideas and insights.
@@ -103,7 +109,7 @@
             </p>
           </div>
           <div class="flex w-full md:w-1/2 md:pl-6">
-            <a href="https://feeds.transistor.fm/the-nickolas-crim-show"><img src="images/ncs-cover.png"></a>
+            <a href="https://feeds.transistor.fm/the-nickolas-crim-show"><img class="shadow-m shadow-slate-200" src="images/ncs-cover.png"></a>
           </div>
         </div>
 
