--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
            Currently I'm building things on the web and <a class="text-slate-700 font-normal hover:text-sky-600" href=""> avaliable for hire</a> for freelance web design and development projects. I've built websites for numerous businesses and creative agencies using modern web standards and popular tools like <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.wordpress.org/">Wordpress</a> and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.webflow.com/">Webflow</a>. This website was built using HTML5 and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>.
           </p>
 
-          <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject= Web Development Project">Start a project</a></button>
+          <button class="text-2xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject= Web Development Project">Need help on a project? Lets chat!</a></button>
 
           <p class="text-2xl font-light text-slate-600 py-6">
            My days are spent in a variety of ways: reading, learning, thinking, walking, exercising, hanging out with my family, and working. My goal is to live a fulfilling life and pursue work that supports my life.
