--- a/pages/sketch-book.html
+++ b/pages/sketch-book.html
@@ -44,21 +44,8 @@
   <main class="px-6 py-24">
 
 
-        <div class="flexw-full ">
-
-          <h2 class="text-4xl font-medium text-slate-600 pb-6">Hey, I'm Nickolas.</h2>
-
-          <p class="text-2xl font-light text-slate-600 pb-6">
-            This small piece of the web serves as a launch pad for my projects, ideas, and other interesting things I discover.
-          </p>
-          <p class="text-2xl font-light text-slate-600 pb-6">
-            I am working on becoming a better writer and do most of that writing on my <a class="text-slate-600 font-normal hover:text-sky-600" href="https://crim.substack.com">Substack page</a>.
-          </p>
-          <p class="text-2xl font-light text-slate-600 pb-12">
-            Also, I'm currently building things on the web and avaliable for hire for freelance web design and development projects. I've built and redesigned websites for numerous businesses and creative agencies using modern web standards and popular tools like <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.wordpress.org/">Wordpress</a> and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.webflow.com/">Webflow</a>. This website was built using HTML5 and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>.
-          </p>
-
-          <button class="text-xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject= Web Development Project">Need help on a project? Lets chat!</a></button>
+        <div class="flexw-full auto-cols-auto">
+          <div><img src=""/></div>
 
         </div>
 
