--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
 <body class="bg-white container mx-auto max-w-5xl">
   <header class="flex flex-row content-center items-center justify-between p-6 mt-3 border-b-2 border-slate-200 ">
-    <h2 class="text-lg text-slate-600 font-bold"><a href="../index.html">Nickolas Crim </a></h2>
+    <h2 class="text-lg tracking-wider text-slate-600 font-bold"><a href="../index.html">Nickolas Crim </a></h2>
       <nav class="w-1/2">
         <ul class="md:flex flex-row content-center justify-evenly">
-          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://crim.substack.com">Essays</a></li>
-          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://feeds.transistor.fm/the-nickolas-crim-show">Podcast</a></li>
-          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://twitter.com/nickolascrim">Twitter</a></li>
-          <li><a class="text-lg font-light text-slate-500 hover:text-sky-600" href="https://www.linkedin.com/in/nickolascrim/">LinkedIn</a></li>
+          <li><a class="text-lg tracking-wide font-light text-slate-500 hover:text-sky-600" href="https://crim.substack.com">Blog</a></li>
+          <li><a class="text-lg tracking-wide font-light text-slate-500 hover:text-sky-600" href="https://feeds.transistor.fm/the-nickolas-crim-show">Podcast</a></li>
+          <li><a class="text-lg tracking-wide font-light text-slate-500 hover:text-sky-600" href="https://twitter.com/nickolascrim">Twitter</a></li>
+          <li><a class="text-lg tracking-wide font-light text-slate-500 hover:text-sky-600" href="https://www.linkedin.com/in/nickolascrim/">LinkedIn</a></li>
         </ul>
       </nav>
 
@@ -46,19 +46,19 @@
 
         <div class="flexw-full ">
 
-          <h2 class="text-4xl font-medium text-slate-600 pb-6">Hey, I'm Nickolas.</h2>
+          <h2 class="text-4xl tracking-tight font-medium text-slate-600 pb-6">Hey, I'm Nickolas.</h2>
 
-          <p class="text-2xl font-light text-slate-600 pb-6">
+          <p class="text-2xl tracking-wide font-light text-slate-600 pb-6">
             This small piece of the web serves as a launch pad for my projects, ideas, and other interesting things I discover.
           </p>
-          <p class="text-2xl font-light text-slate-600 pb-6">
-            I am working on becoming a better writer and do most of that writing on my <a class="text-slate-600 font-normal hover:text-sky-600" href="https://crim.substack.com">Substack page</a>.
+          <p class="text-2xl tracking-wide font-light text-slate-600 pb-6">
+            I am working on becoming a better writer and post most of my writing on my <a class="text-slate-600 font-normal hover:text-sky-600" href="https://crim.substack.com">Substack page</a>.
           </p>
-          <p class="text-2xl font-light text-slate-600 pb-12">
+          <p class="text-2xl tracking-wide font-light text-slate-600 pb-12">
             Also, I'm currently building things on the web and avaliable for hire for freelance web design and development projects. I've built and redesigned websites for numerous businesses and creative agencies using modern web standards and popular tools like <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.wordpress.org/">Wordpress</a> and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.webflow.com/">Webflow</a>. This website was built using HTML5 and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>.
           </p>
 
-          <button class="text-xl font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject= Web Development Project">Need help on a project? Lets chat!</a></button>
+          <button class="text-xl tracking-wide font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject= Web Development Project">Need help on a project? Lets chat!</a></button>
 
         </div>
 
