--- a/index.html
+++ b/index.html
@@ -7,66 +7,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Nickolas Crim</title>
+  <meta name="description" content="">
+  <meta name="author" content="Nickolas Crim">
 
-  <!--
-  <meta name="description" content="A simple HTML5 Template for new projects.">
-  <meta name="author" content="SitePoint">
-
-  <meta property="og:title" content="A Basic HTML5 Template">
+  <meta property="og:title" content="">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
+  <meta property="og:url" content="https://nickolasc.com/">
   <meta property="og:description" content="A simple HTML5 Template for new projects.">
   <meta property="og:image" content="image.png">
 
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
- -->
+  <link rel="icon" href="">
+  <link rel="icon" href="" type="">
+  <link rel="apple-touch-icon" href="">
 
   <link rel="stylesheet" href="dist/output.css">
 
 </head>
 
-<body class="bg-white container mx-auto max-w-5xl">
-  <header class="flex flex-row content-center items-center justify-between p-6 mt-3 border-b-2 border-slate-200 ">
-    <h2 class="text-lg tracking-wider text-slate-600 font-bold"><a href="../index.html">Nickolas Crim </a></h2>
-      <nav class="w-1/2">
-        <ul class="md:flex flex-row content-center justify-evenly">
-          <li><a class="text-lg tracking-wide font-light text-slate-500 hover:text-sky-600" href="https://crim.substack.com">Blog</a></li>
-          <li><a class="text-lg tracking-wide font-light text-slate-500 hover:text-sky-600" href="https://feeds.transistor.fm/the-nickolas-crim-show">Podcast</a></li>
-          <li><a class="text-lg tracking-wide font-light text-slate-500 hover:text-sky-600" href="https://twitter.com/nickolascrim">Twitter</a></li>
-          <li><a class="text-lg tracking-wide font-light text-slate-500 hover:text-sky-600" href="https://www.linkedin.com/in/nickolascrim/">LinkedIn</a></li>
+<body class="w-full bg-contain bg-no-repeat bg-[url('../images/nickolasc-hero-03.svg')]">
+
+  <header class="flex flex-row w-full max-w-6xl mx-auto justify-end p-6">
+      <nav>
+        <ul class="md:flex flex-row content-center justify-between">
+          <li><a class="text-sm sm:text-lg tracking-wide font-normal text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="#work-together">Work together?</a></li>
+            <li><a class="text-sm sm:text-lg tracking-wide font-normal text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="mailto:email@nickolasc.com">Email Me?</a></li>
+          <li><a class="text-sm sm:text-lg tracking-wide font-normal text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e" href="https://crim.substack.com">Substack</a></li>
         </ul>
       </nav>
 
   </header>
-  <main class="px-6 py-24">
 
 
-        <div class="flexw-full ">
+  <main>
 
-          <h2 class="text-4xl tracking-tight font-medium text-slate-600 pb-6">Hey, I'm Nickolas.</h2>
-
-          <p class="text-2xl tracking-wide font-light text-slate-600 pb-6">
-            This small piece of the web serves as a launch pad for my projects, ideas, and other interesting things I discover.
-          </p>
-          <p class="text-2xl tracking-wide font-light text-slate-600 pb-6">
-            I am working on becoming a better writer and post most of my writing on my <a class="text-slate-600 font-normal hover:text-sky-600" href="https://crim.substack.com">Substack page</a>.
-          </p>
-          <p class="text-2xl tracking-wide font-light text-slate-600 pb-12">
-            Also, I'm currently building things on the web and avaliable for hire for freelance web design and development projects. I've built and redesigned websites for numerous businesses and creative agencies using modern web standards and popular tools like <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.wordpress.org/">Wordpress</a> and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.webflow.com/">Webflow</a>. This website was built using HTML5 and <a class="text-slate-600 font-normal hover:text-sky-600" href="https://tailwindcss.com">Tailwindcss</a> and deployed on <a class="text-slate-600 font-normal hover:text-sky-600" href="https://www.netlify.com/">Netlify</a>.
-          </p>
-
-          <button class="text-xl tracking-wide font-light text-slate-600 border border-slate-600 p-2 px-6 rounded-3xl hover:bg-slate-600 hover:text-white"><a href="mailto:email@nickolasc.com?subject= Web Development Project">Need help on a project? Lets chat!</a></button>
-
+    <section class="flex h-screen w-full justify-center px-6">
+      <div class="flex flex-col w-full max-w-6xl mx-auto justify-center items-start">
+          <h1 class="text-5xl sm:text-7xl font-bold text-slate-700 pb-6">Hey, I'm Nickolas</h1>
+          <h2 class="text-xl sm:text-3xl font-light text-slate-600 pb-12 sm:pb-16">Freelance web designer and developer</h2>
+          <img class="h-full max-h-48 sm:max-h-72 w-fit" src="images/hero-arrow-slate-600.svg"/>
         </div>
+    </section>
+
+    <section class="flex h-auto w-full justify-start p-6 py-12" id="work-together">
+      <div class="flex flex-col w-full max-w-6xl mx-auto">
+
+        <h2 class="text-3xl sm:text-5xl font-semibold text-slate-700 pb-12">How to work together</h2>
+          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6"> In 2019 I started re-designing and developing websites during my nights and weekends as a creative outlet. It evolved into a part-time freelancing business and has given me the opportunity to partner with some great agencies and businesses over the past 3 years helping them revamp their web presence. As of July 2022 I am pursuing my freelancing full-time and have greater availability to take on projects.</p>
+
+          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">My clients get the benefit of working directly with the person designing, developing, and managing their project. This reduces the unnecessary back-and-forth and allows for more reliable timelines and pricing. My size also allows me to work quickly, effectively, and (when needed) integrate seamlessly with a team.</p>
+
+          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">I'm proficent in HTML, CSS, Tailwindcss, Figma, Wordpress, Webflow, and have a working knowledge of Javascript and PHP.</p>
+
+          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">Please get in touch: <a class="font-semibold text-slate-600 hover:underline hover:decoration-slate-600 hover:decoration-dotted hover:decoration-2 pb-6" href="mailto:email@nickolasc.com">email@nickolasc.com</a> or cell</p>
+
+
+      </div>
+    </section>
 
 
 
   </main>
 
-  <footer class="flex flex-row content-center items-center justify-between p-6 border-t-2 border-slate-200">
+  <footer class="flex h-auto w-full max-w-6xl mx-auto justify-end p-6">
+    <h3 class="text-md font-light text-slate-600">This site was built with HTML, <a class="font-normal text-slate-600 hover:underline hover:decoration-slate-600 hover:decoration-dotted hover:decoration-2" href="https://tailwindcss.com/">Tailwindcss</a>, and deployed on <a class="font-normal text-slate-600 hover:underline hover:decoration-slate-600 hover:decoration-dotted hover:decoration-2" href="https://www.netlify.com/">Netlify</a>.</h3>
   </footer>
 
   <script src="js/script.js"></script>
