--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">I'm proficent in HTML, CSS, Tailwindcss, Figma, Wordpress, Webflow, and have a working knowledge of Javascript and PHP.</p>
 
-          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">Please get in touch: <a class="font-semibold text-slate-600 hover:underline hover:decoration-slate-600 hover:decoration-dotted hover:decoration-2 pb-6" href="mailto:email@nickolasc.com">email@nickolasc.com</a> or cell</p>
+          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">Please get in touch: <a class="font-semibold text-slate-600 hover:underline hover:decoration-slate-600 hover:decoration-dotted hover:decoration-2 pb-6" href="mailto:email@nickolasc.com">email@nickolasc.com</a> / (404) 594-1377‬</p>
 
 
       </div>
