--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <header class="flex flex-row w-full max-w-6xl mx-auto justify-end p-6">
       <nav>
         <ul class="md:flex flex-row content-center justify-between">
-          <li><a class="text-sm sm:text-lg tracking-wide font-normal text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="#work-together">Work together?</a></li>
-            <li><a class="text-sm sm:text-lg tracking-wide font-normal text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="mailto:email@nickolasc.com">Email Me?</a></li>
-          <li><a class="text-sm sm:text-lg tracking-wide font-normal text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e" href="https://crim.substack.com">Substack</a></li>
+          <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="#work-together">Work together?</a></li>
+            <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="mailto:email@nickolasc.com">Email Me?</a></li>
+          <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e" href="https://crim.substack.com">Substack</a></li>
         </ul>
       </nav>
 
