--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <header class="flex flex-row w-full max-w-6xl mx-auto justify-end p-6">
       <nav>
         <ul class="md:flex flex-row content-center justify-between">
-          <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="#work-together">Work together?</a></li>
-            <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="mailto:email@nickolasc.com">Exchange emails?</a></li>
-          <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-800 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e" href="https://crim.substack.com">Substack</a></li>
+          <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="#work-together">Work together?</a></li>
+            <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="mailto:email@nickolasc.com">Exchange emails?</a></li>
+          <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e" href="https://crim.substack.com">Substack</a></li>
         </ul>
       </nav>
 
@@ -56,7 +56,7 @@
 
           <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">My clients get the benefit of working directly with the person designing, developing, and managing their project. This reduces the unnecessary back-and-forth and allows for more reliable timelines and pricing. My size also allows me to work quickly, effectively, and (when needed) integrate seamlessly with a team.</p>
 
-          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">I'm proficent in HTML, CSS, Tailwindcss, Figma, Wordpress, Webflow, and have a working knowledge of Javascript and PHP.</p>
+          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">I'm proficient in HTML, CSS, Tailwindcss, Figma, Wordpress, Webflow, and have a working knowledge of Javascript and PHP.</p>
 
           <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">Please get in touch: <a class="font-semibold text-slate-600 hover:underline hover:decoration-slate-600 hover:decoration-dotted hover:decoration-2 pb-6" href="mailto:email@nickolasc.com">email@nickolasc.com</a> / (404) 594-1377‬</p>
 
