--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Nickolas Crim</title>
-  <meta name="description" content="">
+  <title>Nickolas Crim | Freelance Web Designer and Developer</title>
+  <meta name="description" content="Hand crafted web design and development services for small to medium size businesses.">
   <meta name="author" content="Nickolas Crim">
 
-  <meta property="og:title" content="">
+  <meta property="og:title" content="Nickolas Crim | Freelance Web Designer and Developer">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://nickolasc.com/">
-  <meta property="og:description" content="A simple HTML5 Template for new projects.">
+  <meta property="og:description" content="Hand crafted web design and development services for small to medium size businesses.">
   <meta property="og:image" content="image.png">
 
   <link rel="icon" href="">
