--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <meta property="og:description" content="Hand crafted web design and development services for small to medium size businesses.">
   <meta property="og:image" content="image.png">
 
-  <link rel="icon" href="">
-  <link rel="icon" href="" type="">
-  <link rel="apple-touch-icon" href="">
+  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="images/favicon-32x32.png" type="image/png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="dist/output.css">
 
