--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://nickolasc.com/">
   <meta property="og:description" content="Hand crafted web design and development services for small to medium size businesses.">
-  <meta property="og:image" content="image.png">
+  <meta property="og:image" content="images/nickolasc-homepage.png">
 
   <link rel="icon" href="images/favicon.ico">
   <link rel="icon" href="images/favicon-32x32.png" type="image/png">
