8/29 updates - adding projects page

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
   <header class="flex flex-row w-full max-w-6xl mx-auto justify-end p-6">
       <nav>
         <ul class="md:flex flex-row content-center justify-between">
-          <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="#work-together">Work together?</a></li>
-            <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="mailto:email@nickolasc.com">Exchange emails?</a></li>
+          <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="#work-together">Working Together</a></li>
+            <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="pages/projects.html">Projects</a></li>
+            <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="mailto:email@nickolasc.com">Email</a></li>
           <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e" href="https://crim.substack.com">Substack</a></li>
         </ul>
       </nav>
@@ -44,12 +45,12 @@
       <div class="flex flex-col w-full max-w-6xl mx-auto justify-center items-start">
           <h1 class="text-5xl sm:text-7xl font-bold text-slate-700 pb-6">Hey, I'm Nickolas</h1>
           <h2 class="text-xl sm:text-3xl font-light text-slate-600 pb-12 sm:pb-16">Freelance web designer and developer</h2>
-          <img class="h-full max-h-48 sm:max-h-72 w-fit" src="images/hero-arrow-slate-600.svg"/>
+          <img class="h-full max-h-48 sm:max-h-72 w-fit" src="images/hero-arrow-slate-600.svg" alt="Curly arrow pointing down"/>
         </div>
     </section>
 
     <section class="flex h-auto w-full justify-start p-6 py-12" id="work-together">
-      <div class="flex flex-col w-full max-w-6xl mx-auto">
+      <div class="flex flex-col w-full items-start max-w-6xl mx-auto">
 
         <h2 class="text-3xl sm:text-5xl font-semibold text-slate-700 pb-12">How to work together</h2>
           <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6"> In 2019 I started re-designing and developing websites during my nights and weekends as a creative outlet. It evolved into a part-time freelancing business and has given me the opportunity to partner with some great agencies and businesses over the past 3 years helping them revamp their web presence. As of July 2022 I am pursuing my freelancing full-time and have greater availability to take on projects.</p>
@@ -60,8 +61,10 @@
 
           <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">Please get in touch: <a class="font-semibold text-slate-600 hover:underline hover:decoration-slate-600 hover:decoration-dotted hover:decoration-2 pb-6" href="mailto:email@nickolasc.com">email@nickolasc.com</a> / (404) 594-1377‬</p>
 
+          <a class="pt-8" href="pages/projects.html"><button class="text-lg sm:text-xl font-semibold text-slate-600 hover:underline hover:decoration-slate-600 hover:decoration-dotted hover:decoration-2">View Featured Projects<img class="inline h-4 pl-2" src="images/arrow-right.svg" /></button></a>
 
       </div>
+
     </section>
 
 
