--- a/pages/projects.html
+++ b/pages/projects.html
@@ -32,6 +32,7 @@
             <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="../index.html">Home</a></li>
           <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="../index.html#work-together">Working Together</a></li>
             <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="../pages/projects.html">Projects</a></li>
+            <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="https://calendly.com/nickolasc/virtual-coffee">Virtual Coffee</a></li>
             <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="mailto:email@nickolasc.com">Email</a></li>
           <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e" href="https://crim.substack.com">Substack</a></li>
         </ul>
@@ -45,11 +46,24 @@
     <section class="flex w-full justify-center px-6 py-32">
       <div class="flex flex-col gap-y-24 w-full max-w-6xl mx-auto">
 
+        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
+          <div class="container"><img class="shadow-2xl" src="../images/radreads-cover.png"/></div>
+          <div class="flex flex-col w-full justify-center">
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">RadReads Homepage</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> In-progress</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong>n/a</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma</h4>
+            <div class="flex flex-row pt-8">
+              <a href="https://www.figma.com/file/vEn4Dz5Uh53xugdwF9M5Oq/RadReads?node-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
+            </div>
+
+          </div>
+        </div>
 
         <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
           <div class="container"><img class="shadow-2xl" src="../images/tolbert-cover.png"/></div>
           <div class="flex flex-col w-full justify-center">
-            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">Insurance Brokerage</h2>
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">Tolbert and Associates Homepage</h2>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> In-progress</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma, Webflow</h4>
@@ -63,7 +77,7 @@
         <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
           <div class="container"><img class="shadow-2xl" src="../images/alma-cover.png"/></div>
           <div class="flex flex-col w-full justify-center">
-            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">Coffee Roasters</h2>
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">Alma Coffee Homepage</h2>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> In-progress</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma, Webflow</h4>
