--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <ul class="md:flex flex-row content-center justify-between">
           <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="#work-together">Working Together</a></li>
             <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2 md:pr-8" href="pages/projects.html">Projects</a></li>
+            <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="https://calendly.com/nickolasc/virtual-coffee">Virtual Coffee</a></li>
             <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e md:pr-8" href="mailto:email@nickolasc.com">Email</a></li>
           <li><a class="text-sm sm:text-lg tracking-wide font-semibold text-slate-700 hover:underline hover:decoration-slate-800 hover:decoration-dotted hover:decoration-2e" href="https://crim.substack.com">Substack</a></li>
         </ul>
