--- a/pages/projects.html
+++ b/pages/projects.html
@@ -51,7 +51,6 @@
           <div class="flex flex-col w-full justify-center">
             <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">RadReads Homepage</h2>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> In-progress</h4>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong>n/a</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma</h4>
             <div class="flex flex-row pt-8">
               <a href="https://www.figma.com/file/vEn4Dz5Uh53xugdwF9M5Oq/RadReads?node-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
@@ -97,6 +96,19 @@
             <div class="flex flex-row pt-8">
               <a href="https://github.com/nickolascrim/personal-site" target="_blank"><img class="h-8 inline pr-6" src="../images/github.svg"/></a>
               <a href="https://www.nickolasc.com/" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
+          <div class="container"><img class="shadow-2xl" src="../images/firststone-cover.png"/></div>
+          <div class="flex flex-col w-full justify-center">
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">First Stone Fitness</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Sam Sager, Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Sam Sager, Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Webflow</h4>
+            <div class="flex flex-row pt-8">
+              <a href="https://firststonefitness.com" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
             </div>
           </div>
         </div>
