--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="flex h-screen w-full justify-center px-6">
       <div class="flex flex-col w-full max-w-6xl mx-auto justify-center items-start">
           <h1 class="text-5xl sm:text-7xl font-bold text-slate-700 pb-6">Hey, I'm Nickolas</h1>
-          <h2 class="text-xl sm:text-3xl font-light text-slate-600 pb-12 sm:pb-16">Freelance web designer and developer</h2>
+          <h2 class="text-xl sm:text-3xl font-light text-slate-600 pb-12 sm:pb-16">Freelance Web Designer and Developer</h2>
           <img class="h-full max-h-48 sm:max-h-72 w-fit" src="images/hero-arrow-slate-600.svg" alt="Curly arrow pointing down"/>
         </div>
     </section>
@@ -54,15 +54,11 @@
       <div class="flex flex-col w-full items-start max-w-6xl mx-auto">
 
         <h2 class="text-3xl sm:text-5xl font-semibold text-slate-700 pb-12">How to work together</h2>
-          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6"> In 2019 I started re-designing and developing websites during my nights and weekends as a creative outlet. It evolved into a part-time freelancing business and has given me the opportunity to partner with some great agencies and businesses over the past 3 years helping them revamp their web presence. As of July 2022 I am pursuing my freelancing full-time and have greater availability to take on projects.</p>
+          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6"> In 2019 I started re-designing and developing websites. It evolved into a part-time freelancing business and has given me the opportunity to partner with some great agencies and businesses over the past 3 years helping them refresh and expand their web presence. As of July 2022 I am pursuing my freelancing full-time and have greater availability to take on projects.</p>
 
-          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">My clients get the benefit of working directly with the person designing, developing, and managing their project. This reduces the unnecessary back-and-forth and allows for more reliable timelines and pricing. My size also allows me to work quickly, effectively, and (when needed) integrate seamlessly with a team.</p>
-
-          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">I'm proficient in HTML, CSS, Tailwindcss, Figma, Wordpress, Webflow, and have a working knowledge of Javascript and PHP.</p>
+          <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">Clients get the benefit of working directly with the person designing, developing, and managing their project. This reduces the unnecessary back-and-forth and allows for more reliable timelines and pricing. My size also allows me to work quickly, effectively, and (when needed) integrate seamlessly with a team.</p>
 
           <p class="text-lg sm:text-2xl font-light text-slate-700 pb-6">Please get in touch: <a class="font-semibold text-slate-600 hover:underline hover:decoration-slate-600 hover:decoration-dotted hover:decoration-2 pb-6" href="mailto:email@nickolasc.com">email@nickolasc.com</a> / (404) 594-1377‬</p>
-
-          <a class="pt-8" href="pages/projects.html"><button class="text-lg sm:text-xl font-semibold text-slate-600 hover:underline hover:decoration-slate-600 hover:decoration-dotted hover:decoration-2">View Featured Projects<img class="inline h-4 pl-2" src="images/arrow-right.svg" /></button></a>
 
       </div>
 
